boreal/tests/assets/invalid_files/parsing/jump_at_bound2.yar
rule a {
    strings:
        $a = { ( CD EF | AB [-2] ) 85 }
    condition:
        $a
}
